<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="254dp"
                android:orientation="vertical"
                android:clipToOutline="true"
                android:background="@drawable/topbox"
                android:scaleType="centerCrop">

                <ImageView
                    android:id="@+id/churrospic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/topbox"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/churros" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/churros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/churros"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/churrosTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/churros_time"
                    android:textSize="25sp" />

                <View
                    android:id="@+id/view11"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="3"
                    android:background="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Ingredients1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/ingredients"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ingredients_food1"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:maxLines="10"
                    android:minLines="2"
                    android:paddingLeft="80dp"
                    android:text="@string/churros_ingredients"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view12"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="3"
                    android:background="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/directions1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/directions"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/steps1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/step1"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/churrostep1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/churrostep1"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/steps2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/step2"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/churrostep2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/churrostep2"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/steps3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/step3"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/churrostep3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/churrostep3"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/steps4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/step4"
                    android:textColor="#AF1B1B"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/churrostep4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/churrostep4"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>